<resources>
    <string name="app_name">Travel Dreams</string>
    <string name="head">Specials</string>
    <string name="banner_content">banner</string>
    <string name="country">Brazil</string>
    <string name="local_image">local image</string>
    <string name="credit_card_payment_message">Type in the credit card information you want to use to make the payment</string>
    <string name="card_name_mask">abcdefghijklmnopqrstuvxzwy\u0020</string>
    <string name="purchase_amount">purchase amount:</string>
    <string name="card_number">Card Number</string>
    <string name="mm">MM</string>
    <string name="aa">AA</string>
    <string name="card_name">Card Name</string>
    <string name="test_local_name">São Paulo</string>
    <string name="test_number_days">2 days</string>
    <string name="test_trip_price">R$ 421,50</string>
    <string name="test_round_trip">08/12 - 10/12 de 2021</string>
    <string name="final_price">Final Price</string>
    <string name="finish_payment">FINISH PAYMENT</string>
    <string name="congratulations">Congratulations</string>
    <string name="successful_purchase">successful purchase :)</string>
    <string name="purchase_resume_verify">Purchase Resume Verify:</string>
</resources>