<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resume_package_local_image"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:contentDescription="@string/local_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resume_package_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resume_package_local_image"
        tools:text="@string/test_local_name" />

    <TextView
        android:id="@+id/resume_package_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/resume_package_local"
        app:layout_constraintTop_toBottomOf="@+id/resume_package_local"
        tools:text="@string/test_number_days" />

    <TextView
        android:id="@+id/resume_package_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toStartOf="@id/resume_package_price"
        app:layout_constraintStart_toStartOf="@+id/resume_package_days"
        app:layout_constraintTop_toBottomOf="@+id/resume_package_days"
        tools:text="@string/test_round_trip" />

    <TextView
        android:id="@+id/resume_package_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/resume_package_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/resume_package_date"
        tools:text="@string/test_trip_price" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_price"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/resume_package_price"
        app:layout_constraintEnd_toEndOf="@+id/resume_package_price" />

    <Button
        android:id="@+id/payment_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/around_color"
        android:text="@string/finish_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/resume_package_local_image"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>