<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/travel_package_banner"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:contentDescription="@string/banner_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@color/banner" />

    <TextView
        android:id="@+id/travel_package_banner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/head"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/travel_package_banner"
        app:layout_constraintTop_toTopOf="@+id/travel_package_banner"
        app:layout_constraintVertical_bias="0.0"
        app:textAllCaps="false" />

    <TextView
        android:id="@+id/travel_package_banner_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/country"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/travel_package_banner_title"
        app:layout_constraintTop_toBottomOf="@+id/travel_package_banner_title" />

    <ListView
        android:id="@+id/package_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/travel_package_banner"
        android:divider="@null"
        android:dividerHeight="0dp"
        tools:listitem="@layout/item_package" />

</androidx.constraintlayout.widget.ConstraintLayout>